# INEP_24-25

./: .ccls  .gitignore  CMakeLists.txt  Makefile  README.md  flake.nix
INEP_Sesion1/: Menu.cpp  Menu.e
Sesion1/: Menu.cpp
Sesion2/: .gitignore  Apuntes.txt  ConnexioDB.cpp  ConnexioDB.hpp  Makefile  Menu  Menu.cpp  accesoDB.txt
Sesion2/Pablo/: Menu  Menu.cpp
Sesion3/: CapaDeDomini.cpp  CapaDeDomini.hpp  CapaDePresentacio.cpp  CapaDePresentacio.hpp  CapaDePresentcaio.cpp  Makefile  Menu.cpp
sql_scripts/: create_tables.sql  drop_tables.sql  examples_tables.sql
src/: ConnexioDB.cpp  ConnexioDB.hpp  PetitFlix.cpp  definitions.cpp  definitions.h  definitions.hpp  main.cpp  main.cpp.old  mainPetitFlix.cpp  singleton.cpp
src/CapaDeDades/: ConnexioBDD.cpp  ConnexioBDD.hpp
src/CapaDeDades/Consulta/: Cercadora.cpp  Cercadora.hpp  Pasarela.cpp  Pasarela.hpp
src/CapaDeDades/Pelicula/: Cercadora.cpp  Cercadora.hpp  Pasarela.cpp  Pasarela.hpp
src/CapaDeDades/Usuari/: Cercadora.cpp  Cercadora.hpp  Pasarela.cpp  Pasarela.hpp
src/CapaDeDades/VisualitzarPelicula/: Cercadora.cpp  Cercadora.hpp  Pasarela.cpp  Pasarela.hpp
src/CapaDeDades/VisualitzarSerie/: Cercadora.cpp  Cercadora.hpp  Pasarela.cpp  Pasarela.hpp
src/CapaDeDomini/: ControlModificaUsuari.cpp  DTOUsuari.cpp  DTOUsuari.hpp  PetitFlix.cpp  PetitFlix.hpp
src/CapaDeDomini/Consultes/: DTOContingut.hpp  TxConsultaEstrenes.cpp  TxConsultaEstrenes.hpp  TxConsultaMesVistes.cpp  TxConsultaMesVistes.hpp  TxConsultaNovetats.cpp  (+1 more)
src/CapaDePresentacio/: CapaDePresentacio.cpp  CapaDePresentacio.hpp
(+35 files in other folders)
